--- a/styles.css
+++ b/styles.css
@@ -551,9 +551,10 @@ body {
 }
 
 .game-info-container {
-  grid-column: 1 / -1;
   display: flex;
   justify-content: space-between;
+  width: 80vw;
+  margin: auto;
 }
 
 .game-info {
@@ -564,13 +565,12 @@ body {
 
 .game-container {
   display: grid;
-  grid-template-columns: repeat(4, auto);
+  grid-template-columns: repeat(3, auto);
   grid-gap: 10px;
   margin: 50px;
   justify-content: center;
   perspective: 500px;
 }
-
 .card {
   position: relative;
   height: 175px;
