Added responsive CSS for header banner and removed inline style on button.

--- a/styles.css
+++ b/styles.css
@@ -1153,3 +1153,21 @@ footer {
   width: 100%;
   margin: 10px;
 }
+
+/* Float header button right on desktop */
+.first-section .btn.btn-dark {
+  float: right;
+}
+
+/* Responsive styles for header on smaller devices */
+@media screen and (max-width: 670px) {
+  .first-section .col.imp h2 {
+    padding-left: 0;
+  }
+  .first-section .btn.btn-dark {
+    float: none;
+  }
+  .first-section .header-text {
+    padding-left: 0;
+  }
+}
